This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Minor errors related to error handling in _sqlite3 module
Type: Stage: resolved
Components: Extension Modules Versions: Python 3.10, Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: berker.peksag, ghaering, miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2021-01-31 13:47 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 24395 merged serhiy.storchaka, 2021-01-31 13:49
PR 24400 merged miss-islington, 2021-01-31 15:42
Messages (3)
msg386015 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-01-31 13:47
There are few minor errors in the _sqlite3:

* In two places the result of PyList_Append() is not checked.
* The lastrowid field of pysqlite_Cursor can contain a reference to destroyed object when GIL is released for calling sqlite3_last_insert_rowid().
* Exception after PyDict_DelItem() in pysqlite_connection_create_collation_impl() is not cleared before calling _pysqlite_seterror() (and there is always an exception set if callable is None). Unlikely it can cause problems, but it is better to be explicit.
msg386025 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2021-01-31 15:42
New changeset 9073180db521dc83e6216ff0da1479d00167f643 by Serhiy Storchaka in branch 'master':
bpo-43083: Fix error handling in _sqlite3 (GH-24395)
https://github.com/python/cpython/commit/9073180db521dc83e6216ff0da1479d00167f643
msg386026 - (view) Author: miss-islington (miss-islington) Date: 2021-01-31 16:06
New changeset 8a833a6f94d8c2baa6aa38abd9fc699881a5b0e1 by Miss Islington (bot) in branch '3.9':
bpo-43083: Fix error handling in _sqlite3 (GH-24395)
https://github.com/python/cpython/commit/8a833a6f94d8c2baa6aa38abd9fc699881a5b0e1
History
Date User Action Args
2022-04-11 14:59:40adminsetgithub: 87249
2021-01-31 16:10:35serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2021-01-31 16:06:39miss-islingtonsetmessages: + msg386026
2021-01-31 15:42:50miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request23214
2021-01-31 15:42:49serhiy.storchakasetmessages: + msg386025
2021-01-31 13:49:08serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request23209
2021-01-31 13:47:29serhiy.storchakacreate