bpo-43083: Fix error handling in _sqlite3 (GH-24395)